--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
-*{box-sizing:border-box;font-family:Poppins,sans-serif}
+*{box-sizing:border-box;font-family:Poppins}
 body{
 margin:0;min-height:100vh;
 display:flex;justify-content:center;align-items:center;
@@ -22,23 +22,18 @@ box-shadow:0 25px 50px rgba(0,0,0,.25)
 h1{color:#ff3366;margin-bottom:4px}
 h2{font-weight:400;margin-bottom:15px}
 
-/* SLIDER (NO CROP) */
-.slider{
-width:100%;height:240px;
-border-radius:20px;overflow:hidden;
-background:#000
-}
+/* IMAGE – FULL, NO BLACK */
 .slider img{
-width:100%;height:100%;
-object-fit:contain;
+width:100%;
+height:auto;
+border-radius:20px;
 display:none
 }
 .slider img.active{display:block}
 
 /* BUTTONS */
 .buttons{
-display:flex;justify-content:center;
-gap:16px;margin:18px 0
+display:flex;justify-content:center;gap:16px;margin:18px 0
 }
 button{
 border:none;border-radius:30px;
@@ -46,9 +41,7 @@ padding:12px 26px;font-size:15px;
 cursor:pointer;transition:.25s
 }
 #yesBtn{background:#ff3366;color:#fff}
-#yesBtn:hover{transform:scale(1.08)}
 #noBtn{background:#eee;color:#333;position:relative}
-
 #gameBtn{
 background:#fff;border:2px solid #ff3366;
 color:#ff3366;width:100%
@@ -64,34 +57,30 @@ display:none;justify-content:center;align-items:center;z-index:99
 background:linear-gradient(135deg,#fff0f5,#ffe3ec);
 padding:26px;border-radius:26px;
 width:90%;max-width:380px;text-align:center;
-animation:pop .4s ease
+animation:pop .35s ease
 }
 @keyframes pop{
 from{transform:scale(.7);opacity:0}
 to{transform:scale(1);opacity:1}
 }
-.popup-card h3{color:#ff3366;margin-bottom:10px}
-.popup-card button{
-margin-top:15px;background:#ff3366;color:#fff
-}
+.popup-card h3{color:#ff3366}
 
 /* HEART GAME */
-.heart-area span{
-font-size:32px;cursor:pointer;
-margin:6px;display:inline-block;
-animation:float 1.8s linear infinite
+.heart-area{
+position:relative;
+height:220px;
+overflow:hidden
 }
-@keyframes float{
-from{transform:translateY(0)}
-to{transform:translateY(-120px)}
+.heart{
+position:absolute;
+bottom:-40px;
+font-size:32px;
+animation:jump 1.6s ease-out forwards;
+cursor:pointer
 }
-
-/* QUIZ */
-.quiz button{
-display:block;width:100%;
-margin:8px 0
+@keyframes jump{
+to{transform:translateY(-260px);opacity:0}
 }
-.correct{background:#4caf50!important;color:#fff}
 </style>
 </head>
 
@@ -130,26 +119,24 @@ margin:8px 0
 <script>
 /* MUSIC */
 document.addEventListener('click',()=>{
-document.getElementById('music').play().catch(()=>{})
+music.play().catch(()=>{})
 },{once:true})
 
 /* SLIDER */
 let slides=document.querySelectorAll('.slider img')
-let i=0
+let s=0
 setInterval(()=>{
-slides[i].classList.remove('active')
-i=(i+1)%slides.length
-slides[i].classList.add('active')
-},2800)
+slides[s].classList.remove('active')
+s=(s+1)%slides.length
+slides[s].classList.add('active')
+},3000)
 
 /* POPUP */
 function openPopup(html){
 popup.style.display='flex'
 popupCard.innerHTML=html
 }
-function closePopup(){
-popup.style.display='none'
-}
+function closePopup(){popup.style.display='none'}
 
 /* YES */
 yesBtn.onclick=()=>{
@@ -160,7 +147,7 @@ openPopup(`
 `)
 }
 
-/* NO BUTTON SAFE RUN */
+/* NO */
 let noCount=0
 noBtn.addEventListener('mouseenter',()=>{
 noBtn.style.transform=
@@ -171,86 +158,49 @@ noCount++
 if(noCount>=2){
 openPopup(`
 <h3>HOW DARE YOU 😾</h3>
-<p>It's just for formality 😚<br>
-NO is invalid 🥰</p>
+<p>It's just for formality 😚<br>NO is invalid 🥰</p>
 <button onclick="closePopup()">OK</button>
 `)
 }
 }
 
-/* GAME */
-gameBtn.onclick=startHeartGame
-let caught=0
+/* HEART GAME – JUMP FROM BOTTOM */
+gameBtn.onclick=startGame
+let caught=0,interval
 
-function startHeartGame(){
+function startGame(){
 caught=0
 openPopup(`
 <h3>Catch 3 hearts ❤️</h3>
 <p>Hearts caught: <b id="count">0</b>/3</p>
 <div class="heart-area" id="heartArea"></div>
 `)
-spawnHearts()
+interval=setInterval(spawnHeart,600)
 }
 
-function spawnHearts(){
+function spawnHeart(){
 let area=document.getElementById('heartArea')
-let interval=setInterval(()=>{
-let h=document.createElement('span')
+let h=document.createElement('div')
+h.className='heart'
 h.innerHTML='❤️'
+h.style.left=Math.random()*80+'%'
 h.onclick=()=>{
 caught++
 document.getElementById('count').innerText=caught
 h.remove()
 if(caught>=3){
 clearInterval(interval)
+setTimeout(()=>{
 openPopup(`
-<h3>My heart is yours 😭❤️</h3>
-<p>Looks like my heart already belongs to you</p>
-<button onclick="startQuiz()">Next & Final Game</button>
+<h3>My heart is already yours 😭❤️</h3>
+<p>Looks like my heart belongs to you</p>
+<button onclick="closePopup()">Awww 🥹</button>
 `)
+},300)
 }
 }
 area.appendChild(h)
-setTimeout(()=>h.remove(),2000)
-},500)
-}
-
-/* QUIZ */
-let q=0,score=0
-const quiz=[
-{q:"Who loves me more?",o:["Sneha","Bubu","Sonai"],a:[0,1,2]},
-{q:"What I love the most?",o:["irritating sneha","loving sneha","touching sneha","all of these"],a:[3]},
-{q:"Who gets jealous faster?",o:["Sneha","Rishi","Both"],a:[2]},
-{q:"How many kids we want?",o:["4","2","1","69"],a:[2]},
-{q:"How much does Rishi love you?",o:["0%","69%","100%","♾️"],a:[3]}
-]
-
-function startQuiz(){
-q=0;score=0;nextQ()
-}
-function nextQ(){
-let data=quiz[q]
-let html=`<h3>${data.q}</h3>`
-data.o.forEach((o,i)=>{
-html+=`<button onclick="ans(${i},this)">${o}</button>`
-})
-popupCard.innerHTML=html
-}
-function ans(i,b){
-if(quiz[q].a.includes(i)){
-b.classList.add('correct')
-score++
-}
-setTimeout(()=>{
-q++
-q<quiz.length?nextQ():
-openPopup(`
-<h3>Sneha scored ${score}/5 💕</h3>
-<p>No matter what your score is<br>
-You love me the most 😌❤️</p>
-<button onclick="closePopup()">Forever Us 💞</button>
-`)
-},700)
+setTimeout(()=>h.remove(),1600)
 }
 </script>
 
