--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sneha ❤️ Valentine</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<title>Sneha ❤️</title>
 
 <style>
-*{box-sizing:border-box;font-family:Poppins}
+*{font-family:Poppins;box-sizing:border-box}
 body{
 margin:0;min-height:100vh;
 display:flex;justify-content:center;align-items:center;
@@ -17,190 +15,175 @@ background:linear-gradient(135deg,#ff6a88,#ff99ac)
 .container{
 background:#fff;width:92%;max-width:420px;
 padding:22px;border-radius:28px;text-align:center;
-box-shadow:0 25px 50px rgba(0,0,0,.25)
+box-shadow:0 20px 40px rgba(0,0,0,.25)
 }
-h1{color:#ff3366;margin-bottom:4px}
-h2{font-weight:400;margin-bottom:15px}
-
-/* IMAGE – FULL, NO BLACK */
-.slider img{
-width:100%;
-height:auto;
-border-radius:20px;
-display:none
-}
-.slider img.active{display:block}
-
-/* BUTTONS */
-.buttons{
-display:flex;justify-content:center;gap:16px;margin:18px 0
-}
+img{width:100%;border-radius:22px}
 button{
 border:none;border-radius:30px;
-padding:12px 26px;font-size:15px;
-cursor:pointer;transition:.25s
+padding:12px 24px;margin:8px;
+font-size:15px;cursor:pointer
 }
-#yesBtn{background:#ff3366;color:#fff}
-#noBtn{background:#eee;color:#333;position:relative}
-#gameBtn{
-background:#fff;border:2px solid #ff3366;
-color:#ff3366;width:100%
-}
+.yes{background:#ff3366;color:white}
+.no{background:#eee}
+.action{border:2px solid #ff3366;background:white;color:#ff3366;width:100%}
 
-/* POPUP */
 .popup{
 position:fixed;inset:0;
-background:rgba(0,0,0,.65);
+background:rgba(0,0,0,.6);
 display:none;justify-content:center;align-items:center;z-index:99
 }
-.popup-card{
+.card{
 background:linear-gradient(135deg,#fff0f5,#ffe3ec);
-padding:26px;border-radius:26px;
-width:90%;max-width:380px;text-align:center;
-animation:pop .35s ease
+padding:24px;border-radius:26px;
+width:90%;max-width:380px;text-align:center
 }
-@keyframes pop{
-from{transform:scale(.7);opacity:0}
-to{transform:scale(1);opacity:1}
+.okay{
+background:linear-gradient(135deg,#ff3366,#ff6a88);
+color:white;padding:10px 28px;border-radius:30px;
+box-shadow:0 0 14px rgba(255,51,102,.6)
 }
-.popup-card h3{color:#ff3366}
 
 /* HEART GAME */
-.heart-area{
-position:relative;
-height:220px;
-overflow:hidden
-}
+.game-area{height:280px;position:relative;overflow:hidden}
 .heart{
-position:absolute;
-bottom:-40px;
-font-size:32px;
-animation:jump 1.6s ease-out forwards;
-cursor:pointer
+position:absolute;bottom:-40px;font-size:28px;
+animation:fly 3s linear forwards;cursor:pointer
 }
-@keyframes jump{
-to{transform:translateY(-260px);opacity:0}
+@keyframes fly{to{bottom:320px}}
+
+/* QUIZ */
+.option{
+display:block;width:100%;
+margin:8px 0;padding:12px;
+border-radius:25px;border:2px solid #ff3366;
+background:white;color:#ff3366
+}
+.correct{
+background:#2ecc71!important;color:white!important
+}
+.blast{
+animation:pop .4s ease
+}
+@keyframes pop{
+0%{transform:scale(1)}
+50%{transform:scale(1.2)}
+100%{transform:scale(1)}
 }
 </style>
 </head>
 
 <body>
 
-<audio id="music" loop>
-<source src="music.mp3.mp3" type="audio/mpeg">
-</audio>
-
 <div class="container">
-<h1>❤️ Sneha ❤️</h1>
-<h2>Will you be my Valentine?</h2>
+<h2>❤️ Sneha ❤️</h2>
+<p>Will you be my Valentine?</p>
 
-<div class="slider">
-<img src="pic1.jpg.jpeg" class="active">
-<img src="pic2.jpg.jpeg">
-<img src="pic3.jpg.jpeg">
+<img src="your-image.jpg">
+
+<button class="yes" onclick="yesClick()">Yes 💖</button>
+<button class="no" id="no">No 🙈</button>
+
+<button class="action" onclick="startHeartGame()">Play a little game 🎮</button>
 </div>
 
-<div class="buttons">
-<button id="yesBtn">Yes 💖</button>
-<button id="noBtn">No 🙈</button>
-</div>
-
-<button id="gameBtn">Play a little game 🎮</button>
-
-<p style="font-size:12px;color:#777;margin-top:10px">
-"Every moment with you feels like a dream come true"
-</p>
-</div>
-
+<!-- POPUP -->
 <div class="popup" id="popup">
-<div class="popup-card" id="popupCard"></div>
+<div class="card" id="content"></div>
 </div>
+
+<audio id="clickSound" src="https://assets.mixkit.co/sfx/preview/mixkit-soft-click-1123.mp3"></audio>
+<audio id="heartSound" src="https://assets.mixkit.co/sfx/preview/mixkit-game-ball-tap-2073.mp3"></audio>
 
 <script>
-/* MUSIC */
-document.addEventListener('click',()=>{
-music.play().catch(()=>{})
-},{once:true})
+const popup=document.getElementById("popup")
+const content=document.getElementById("content")
+const clickSound=document.getElementById("clickSound")
+const heartSound=document.getElementById("heartSound")
 
-/* SLIDER */
-let slides=document.querySelectorAll('.slider img')
-let s=0
-setInterval(()=>{
-slides[s].classList.remove('active')
-s=(s+1)%slides.length
-slides[s].classList.add('active')
-},3000)
+function play(s){s.currentTime=0;s.play()}
+function open(html){content.innerHTML=html;popup.style.display="flex"}
+function close(){popup.style.display="none"}
 
-/* POPUP */
-function openPopup(html){
-popup.style.display='flex'
-popupCard.innerHTML=html
+/* NO RUNS */
+document.getElementById("no").onmouseover=e=>{
+e.target.style.transform=
+`translate(${Math.random()*120-60}px,${Math.random()*60-30}px)`
 }
-function closePopup(){popup.style.display='none'}
 
 /* YES */
-yesBtn.onclick=()=>{
-openPopup(`
-<h3>I knew it 😭❤️</h3>
-<p>You are my Valentine forever 💞</p>
-<button onclick="closePopup()">OK</button>
-`)
+function yesClick(){
+play(clickSound)
+open(`<h3>I knew it 😭❤️</h3>
+<button class="okay" onclick="close()">OKAY</button>`)
 }
 
-/* NO */
-let noCount=0
-noBtn.addEventListener('mouseenter',()=>{
-noBtn.style.transform=
-`translate(${Math.random()*60-30}px,${Math.random()*30-15}px)`
-})
-noBtn.onclick=()=>{
-noCount++
-if(noCount>=2){
-openPopup(`
-<h3>HOW DARE YOU 😾</h3>
-<p>It's just for formality 😚<br>NO is invalid 🥰</p>
-<button onclick="closePopup()">OK</button>
-`)
-}
-}
-
-/* HEART GAME – JUMP FROM BOTTOM */
-gameBtn.onclick=startGame
-let caught=0,interval
-
-function startGame(){
-caught=0
-openPopup(`
+/* GAME 1 */
+function startHeartGame(){
+play(clickSound)
+let caught=0
+open(`
 <h3>Catch 3 hearts ❤️</h3>
-<p>Hearts caught: <b id="count">0</b>/3</p>
-<div class="heart-area" id="heartArea"></div>
+<p id="count">0 / 3</p>
+<div class="game-area" id="area"></div>
 `)
-interval=setInterval(spawnHeart,600)
-}
+const area=document.getElementById("area")
+const count=document.getElementById("count")
 
-function spawnHeart(){
-let area=document.getElementById('heartArea')
-let h=document.createElement('div')
-h.className='heart'
-h.innerHTML='❤️'
-h.style.left=Math.random()*80+'%'
+const interval=setInterval(()=>{
+const h=document.createElement("div")
+h.className="heart"
+h.innerText="❤️"
+h.style.left=Math.random()*90+"%"
 h.onclick=()=>{
-caught++
-document.getElementById('count').innerText=caught
+play(heartSound)
+caught++;count.innerText=caught+" / 3"
 h.remove()
-if(caught>=3){
+if(caught===3){
 clearInterval(interval)
 setTimeout(()=>{
-openPopup(`
-<h3>My heart is already yours 😭❤️</h3>
-<p>Looks like my heart belongs to you</p>
-<button onclick="closePopup()">Awww 🥹</button>
+open(`
+<h3>You won 😘</h3>
+<button class="okay" onclick="startQuiz()">Next and final game 💘</button>
 `)
-},300)
-}
+},400)
 }
 area.appendChild(h)
-setTimeout(()=>h.remove(),1600)
+},700)
+}
+
+/* GAME 2 – QUIZ */
+let score=0,q=0
+const quiz=[
+{q:"Who loves me more?",o:["Sneha","Bubu","Sonai"],a:[0,1,2]},
+{q:"What I love the most?",o:["irritating sneha","loving sneha","touching sneha","all of these"],a:[3]},
+{q:"Who gets more jealous faster?",o:["Sneha","Rishi","Both of them"],a:[2]},
+{q:"How many kids we want?",o:["4","2","1","69"],a:[2]},
+{q:"How much does Rishi loves you?",o:["0%","69%","100%","♾️"],a:[3]}
+]
+
+function startQuiz(){score=0;q=0;showQ()}
+
+function showQ(){
+open(`<h3>${quiz[q].q}</h3>`+
+quiz[q].o.map((t,i)=>
+`<button class="option" onclick="pick(this,${i})">${t}</button>`
+).join(""))
+}
+
+function pick(btn,i){
+play(clickSound)
+if(quiz[q].a.includes(i)){
+btn.classList.add("correct","blast")
+score++
+}
+setTimeout(()=>{
+q++
+q<quiz.length?showQ():
+open(`<h3>Sneha scored ${score}/5 💕</h3>
+<p>No matter what your score is<br>
+You love me the most 😌❤️</p>
+<button class="okay" onclick="close()">OKAY</button>`)
+},500)
 }
 </script>
 
