--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@ h2{font-weight:400}
 
 img{
 width:100%;
+height:260px;
+object-fit:contain;
 border-radius:22px;
-object-fit:contain
+background:#fff
 }
 
 .buttons{
@@ -75,7 +77,6 @@ animation:fly 3s linear forwards
 }
 @keyframes fly{to{bottom:320px}}
 
-/* QUIZ */
 .quiz-btn{
 display:block;width:100%;margin:8px 0;
 padding:10px;border-radius:20px;
@@ -85,26 +86,18 @@ background:white
 .quiz-btn.correct{
 background:#4CAF50;color:white;border:none
 }
-
-/* HEART BLAST */
-.blast{
-position:absolute;font-size:20px;
-animation:pop 1s forwards
-}
-@keyframes pop{
-0%{transform:scale(1);opacity:1}
-100%{transform:scale(2);opacity:0}
-}
 </style>
 </head>
 
 <body>
 
+<audio id="bgMusic" src="music.mp3.mp3" loop></audio>
+
 <div class="container">
 <h1>❤️ Sneha ❤️</h1>
 <h2>Will you be my Valentine?</h2>
 
-<img src="your-image.jpg">
+<img id="slider" src="pic1.jpg.jpeg">
 
 <div class="buttons">
 <button id="yes">Yes 💖</button>
@@ -121,13 +114,23 @@ animation:pop 1s forwards
 </div>
 
 <script>
+/* MUSIC START ON FIRST CLICK */
+document.addEventListener("click",()=>{
+document.getElementById("bgMusic").play().catch(()=>{})
+},{once:true})
+
+/* IMAGE SLIDER */
+const pics=["pic1.jpg.jpeg","pic2.jpg.jpeg","pic3.jpg.jpeg"]
+let pi=0
+setInterval(()=>{
+pi=(pi+1)%pics.length
+document.getElementById("slider").src=pics[pi]
+},3000)
+
+/* POPUP */
 const popup=document.getElementById("popup")
 const content=document.getElementById("popupContent")
-
-function openPopup(html){
-content.innerHTML=html
-popup.style.display="flex"
-}
+function openPopup(html){content.innerHTML=html;popup.style.display="flex"}
 function closePopup(){popup.style.display="none"}
 
 /* YES */
@@ -139,13 +142,22 @@ openPopup(`
 `)
 }
 
-/* NO RUNS AWAY */
+/* NO RUN AWAY */
+let noCount=0
 document.getElementById("no").onmouseover=e=>{
+noCount++
 e.target.style.transform=
 `translate(${Math.random()*120-60}px,${Math.random()*60-30}px)`
+if(noCount===2){
+openPopup(`
+<h3>HOW DARE YOU 😾</h3>
+<p>NO is just for formality 😚<br>Option NO is invalid 🥰</p>
+<button class="okay" onclick="closePopup()">OKAY</button>
+`)
+}
 }
 
-/* GAME 1 – HEARTS */
+/* GAME 1 – HEART */
 function startHeartGame(){
 let caught=0
 openPopup(`
@@ -178,42 +190,17 @@ area.appendChild(h)
 },700)
 }
 
-/* GAME 2 – WHAT I LOVE THE MOST */
+/* GAME 2 – QUIZ */
 const quiz=[
-{
-q:"Who loves me more?",
-o:["Sneha","Bubu","Sonai"],
-c:[0,1,2]
-},
-{
-q:"What I love the most?",
-o:["irritating sneha","loving sneha","touching sneha","all of these"],
-c:[3]
-},
-{
-q:"Who gets more jealous faster?",
-o:["Sneha","Rishi","Both of them"],
-c:[2]
-},
-{
-q:"How many kids we want?",
-o:["4","2","1","69"],
-c:[2]
-},
-{
-q:"How much does Rishi loves you?",
-o:["0%","69%","100%","♾️"],
-c:[3]
-}
+{q:"Who loves me more?",o:["Sneha","Bubu","Sonai"],c:[0,1,2]},
+{q:"What I love the most?",o:["irritating sneha","loving sneha","touching sneha","all of these"],c:[3]},
+{q:"Who gets more jealous faster?",o:["Sneha","Rishi","Both of them"],c:[2]},
+{q:"How many kids we want?",o:["4","2","1","69"],c:[2]},
+{q:"How much does Rishi loves you?",o:["0%","69%","100%","♾️"],c:[3]}
 ]
 
 let qi=0,score=0
-
-function startQuiz(){
-qi=0;score=0
-showQuiz()
-}
-
+function startQuiz(){qi=0;score=0;showQuiz()}
 function showQuiz(){
 const q=quiz[qi]
 openPopup(`
@@ -223,30 +210,15 @@ ${q.o.map((op,i)=>`
 `).join("")}
 `)
 }
-
 function answer(i,btn){
 const q=quiz[qi]
-if(q.c.includes(i)){score++}
+if(q.c.includes(i))score++
 btn.classList.add("correct")
-blast(btn)
 setTimeout(()=>{
 qi++
 qi<quiz.length?showQuiz():result()
 },700)
 }
-
-function blast(el){
-for(let i=0;i<8;i++){
-const b=document.createElement("div")
-b.className="blast"
-b.innerText="❤️"
-b.style.left=Math.random()*100+"%"
-b.style.top=Math.random()*100+"%"
-el.appendChild(b)
-setTimeout(()=>b.remove(),1000)
-}
-}
-
 function result(){
 openPopup(`
 <h3>Game complete 💕</h3>
