--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>Sneha ❤️</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <style>
-* { box-sizing: border-box; font-family: 'Poppins', sans-serif; margin:0; padding:0;}
-body {
+*{margin:0; padding:0; box-sizing:border-box; font-family:'Poppins', sans-serif;}
+body{
   min-height:100vh;
   display:flex;
   justify-content:center;
@@ -16,138 +16,106 @@ body {
   overflow-x:hidden;
 }
 
-/* Container Card */
-.container {
-  width: 92%;
-  max-width: 420px;
-  padding: 30px;
-  border-radius: 30px;
+/* Container */
+.container{
+  width:92%;
+  max-width:420px;
+  padding:30px;
+  border-radius:30px;
   background: rgba(255,255,255,0.2);
-  backdrop-filter: blur(12px);
-  box-shadow: 0 20px 40px rgba(0,0,0,0.25);
-  text-align: center;
-  animation: fadeIn 1s ease forwards;
+  backdrop-filter: blur(15px);
+  box-shadow:0 20px 40px rgba(0,0,0,0.25);
+  text-align:center;
 }
 
-@keyframes fadeIn {
-  from {opacity:0; transform:translateY(20px);}
-  to {opacity:1; transform:translateY(0);}
-}
+h1{color:#ff3366;font-size:2.4rem;margin-bottom:10px;}
+h2{font-weight:400;color:#fff;text-shadow:0 2px 6px rgba(0,0,0,0.2); margin-bottom:20px;}
 
-h1 {
-  color: #ff3366;
-  font-size: 2.4rem;
-  margin-bottom: 10px;
-}
-
-h2 {
-  font-weight:400;
-  color:#fff;
-  text-shadow: 0 2px 6px rgba(0,0,0,0.2);
-  margin-bottom: 20px;
-}
-
-img#slider {
+/* Slider */
+img#slider{
   width:100%;
-  height:280px;
-  object-fit:cover;
-  border-radius: 25px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-  margin-bottom: 20px;
+  height:auto; 
+  max-height:300px;
+  border-radius:25px;
+  box-shadow:0 10px 20px rgba(0,0,0,0.2);
+  margin-bottom:20px;
   transition: transform 0.5s ease;
 }
-
-img#slider:hover {
-  transform: scale(1.05);
-}
+img#slider:hover{transform: scale(1.05);}
 
 /* Buttons */
-.buttons {
+.buttons{
   display:flex;
   justify-content:center;
   gap:20px;
-  margin-bottom: 20px;
+  margin-bottom:20px;
 }
-
-button {
+button{
   border:none;
-  border-radius: 40px;
+  border-radius:40px;
   padding:12px 30px;
   font-size:16px;
   cursor:pointer;
-  transition: all 0.3s ease;
   font-weight:600;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.15);
+  box-shadow:0 5px 15px rgba(0,0,0,0.15);
+  transition: all 0.3s ease;
 }
-
-#yes {
+#yes{
   background: linear-gradient(135deg,#ff6a88,#ff99ac);
   color:white;
 }
-#yes:hover {
-  box-shadow: 0 0 20px #ff99ac;
-  transform: translateY(-3px);
-}
-
-#no {
+#yes:hover{box-shadow:0 0 20px #ff99ac; transform:translateY(-3px);}
+#no{
   background: rgba(255,255,255,0.8);
   color:#333;
   position:relative;
 }
-#no:hover {
-  transform: scale(1.05);
-}
+#no:hover{transform: scale(1.05);}
 
-/* Action button */
-.action {
+/* Action Button */
+.action{
   width:100%;
   margin-top:15px;
   background: rgba(255,255,255,0.3);
   border: 2px solid #ff3366;
-  color: #ff3366;
-  font-weight:600;
+  color:#ff3366;
 }
-.action:hover {
-  background: #ff3366;
-  color: #fff;
-  box-shadow: 0 0 20px #ff6a88;
-  transform: translateY(-3px);
+.action:hover{
+  background:#ff3366; color:#fff; box-shadow:0 0 20px #ff6a88; transform:translateY(-3px);
 }
 
 /* Footer */
-.footer {
-  font-size: 13px;
+.footer{
+  font-size:13px;
   color:#fff;
   margin-top:15px;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.2);
+  text-shadow:0 1px 3px rgba(0,0,0,0.2);
 }
 
 /* Popup */
-.popup {
-  position: fixed;
+.popup{
+  position:fixed;
   inset:0;
   background: rgba(0,0,0,0.6);
   display:none;
   justify-content:center;
   align-items:center;
   z-index:99;
-  animation: popupFade 0.5s ease forwards;
 }
-@keyframes popupFade { from{opacity:0;} to{opacity:1;} }
-
-.card {
+.card{
   background: rgba(255,255,255,0.25);
   backdrop-filter: blur(15px);
   padding:30px;
-  border-radius: 30px;
-  width: 90%;
-  max-width: 400px;
+  border-radius:30px;
+  width:90%;
+  max-width:400px;
   text-align:center;
-  box-shadow: 0 15px 30px rgba(0,0,0,0.25);
-  position: relative;
+  box-shadow:0 15px 30px rgba(0,0,0,0.25);
+  min-height:320px;
 }
 
-.okay {
+/* Buttons inside popup */
+.okay{
   margin-top:20px;
   background: linear-gradient(135deg,#ff3366,#ff6a88);
   color:white;
@@ -158,14 +126,10 @@ button {
   cursor:pointer;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.okay:hover { transform: translateY(-3px); box-shadow:0 0 25px #ff6a88; }
+.okay:hover{transform:translateY(-3px); box-shadow:0 0 25px #ff6a88;}
 
 /* Heart Game */
-.game-area{
-  position:relative;
-  height:280px;
-  overflow:hidden;
-}
+.game-area{position:relative; height:280px; overflow:hidden;}
 .heart{
   position:absolute;
   bottom:-40px;
@@ -173,9 +137,7 @@ button {
   cursor:pointer;
   animation:fly 3s linear forwards;
 }
-@keyframes fly{
-  to {bottom:320px;}
-}
+@keyframes fly{to{bottom:320px;}}
 
 /* Quiz buttons */
 .quiz-btn{
@@ -188,27 +150,18 @@ button {
   background:rgba(255,255,255,0.8);
   font-weight:600;
   cursor:pointer;
-  transition: all 0.3s ease;
+  transition:all 0.3s ease;
 }
-.quiz-btn:hover {background:#ff6a88;color:#fff;}
+.quiz-btn:hover{background:#ff6a88; color:#fff;}
+.quiz-btn.correct{background:#4CAF50; color:white; border:none;}
 
-/* Correct answer */
-.quiz-btn.correct{
-  background:#4CAF50;
-  color:white;
-  border:none;
-}
-
-/* Heart blast animation */
+/* Heart blast */
 .blast{
   position:absolute;
   font-size:22px;
   animation:pop 1s forwards;
 }
-@keyframes pop{
-  0% {transform:scale(1); opacity:1;}
-  100%{transform:scale(2); opacity:0;}
-}
+@keyframes pop{0%{transform:scale(1);opacity:1;} 100%{transform:scale(2);opacity:0;}}
 </style>
 </head>
 <body>
@@ -227,7 +180,6 @@ button {
 </div>
 
 <button class="action" onclick="startHeartGame()">Play a little game 🎮</button>
-
 <p class="footer">Every moment with you feels like a dream come true</p>
 </div>
 
@@ -242,25 +194,28 @@ document.addEventListener("click",()=>{
   music.play().catch(e=>console.log("Music play blocked", e));
 },{once:true})
 
-/* IMAGE SLIDER */
+/* SLIDER */
 const pics=["pic1.jpg.jpeg","pic2.jpg.jpeg","pic3.jpg.jpeg"];
 let pi=0;
-setInterval(()=>{ pi=(pi+1)%pics.length; document.getElementById("slider").src=pics[pi]; },3000);
+setInterval(()=>{
+  pi=(pi+1)%pics.length;
+  document.getElementById("slider").src=pics[pi];
+},3000);
 
-/* POPUP FUNCTIONS */
+/* POPUP */
 const popup=document.getElementById("popup");
 const content=document.getElementById("popupContent");
-function openPopup(html){content.innerHTML=html;popup.style.display="flex";}
+function openPopup(html){content.innerHTML=html; popup.style.display="flex";}
 function closePopup(){popup.style.display="none";}
 
-/* YES BUTTON */
+/* YES */
 document.getElementById("yes").onclick=()=>openPopup(`
   <h3>I knew it 😭❤️</h3>
   <p>You just made my whole world brighter</p>
   <button class="okay" onclick="closePopup()">OKAY</button>
 `);
 
-/* NO BUTTON */
+/* NO */
 let noCount=0;
 document.getElementById("no").onmouseover=e=>{
   noCount++;
@@ -305,9 +260,9 @@ function startHeartGame(){
   },700);
 }
 
-/* QUIZ GAME */
+/* QUIZ */
 const quiz=[
-  {q:"Who loves me more?", o:["Sneha","Bubu","Sonai"], c:[0,1,2]},
+  {q:"Who loves me more?", o:["Sneha","Bubu","Sonai"], c:[0,1,2]}, // ALL correct
   {q:"What I love the most?", o:["irritating sneha","loving sneha","touching sneha","all of these"], c:[3]},
   {q:"Who gets more jealous faster?", o:["Sneha","Rishi","Both of them"], c:[2]},
   {q:"How many kids we want?", o:["4","2","1","69"], c:[1]},
@@ -317,7 +272,6 @@ const quiz=[
 let qi=0, score=0;
 
 function startQuiz(){qi=0; score=0; showQuiz();}
-
 function showQuiz(){
   const q=quiz[qi];
   openPopup(`
@@ -327,8 +281,8 @@ function showQuiz(){
 }
 
 function answer(i, btn){
-  const q = quiz[qi];
-  if(q.c.includes(i)) score++;
+  const q=quiz[qi];
+  if(q.c.includes(i)) score++; // counts all correct options
   btn.classList.add("correct");
   blast(btn);
   setTimeout(()=>{qi++; qi<quiz.length?showQuiz():result();},700);
