--- a/index.html
+++ b/index.html
@@ -4,192 +4,214 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sneha ❤️</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
 <style>
-*{margin:0; padding:0; box-sizing:border-box; font-family:'Poppins', sans-serif;}
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Poppins',sans-serif;
+}
+
 body{
   min-height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-  overflow-x:hidden;
+  background:linear-gradient(135deg,#ff6a88,#ff99ac);
 }
 
-/* Container */
 .container{
   width:92%;
   max-width:420px;
-  padding:30px;
+  background:rgba(255,255,255,0.25);
+  backdrop-filter:blur(14px);
+  padding:26px;
   border-radius:30px;
-  background: rgba(255,255,255,0.2);
-  backdrop-filter: blur(15px);
-  box-shadow:0 20px 40px rgba(0,0,0,0.25);
   text-align:center;
-  animation: fadeIn 1s ease forwards;
+  box-shadow:0 20px 40px rgba(0,0,0,.25);
 }
-@keyframes fadeIn { from{opacity:0; transform:translateY(20px);} to{opacity:1; transform:translateY(0);} }
 
-h1{color:#ff3366;font-size:2.4rem;margin-bottom:10px;}
-h2{font-weight:400;color:#fff;text-shadow:0 2px 6px rgba(0,0,0,0.2); margin-bottom:20px;}
+/* HEADINGS */
+h1{color:#ff2f6d;margin-bottom:5px;}
+h2{font-weight:400;color:#fff;margin-bottom:16px;}
 
-/* Slider */
-.slider-wrapper{
+/* IMAGE */
+.slider-box{
   width:100%;
+  border-radius:22px;
   overflow:hidden;
-  border-radius:25px;
-  box-shadow:0 10px 20px rgba(0,0,0,0.2);
-  margin-bottom:20px;
+  background:#fff;
+  box-shadow:0 10px 20px rgba(0,0,0,.2);
 }
-img#slider{
+
+#slider{
   width:100%;
   height:auto;
-  object-fit:contain; /* full image visible */
+  object-fit:contain;
   display:block;
-  transition: transform 0.5s ease;
 }
-img#slider:hover{transform:scale(1.05);}
 
-/* Buttons */
+/* LOVE TEXT */
+.love-text{
+  margin-top:14px;
+  padding:14px;
+  font-size:14px;
+  line-height:1.6;
+  color:#fff;
+  background:rgba(255,255,255,0.18);
+  border-radius:20px;
+  backdrop-filter:blur(6px);
+  text-shadow:0 2px 6px rgba(0,0,0,.25);
+}
+
+/* BUTTONS */
 .buttons{
   display:flex;
   justify-content:center;
-  gap:20px;
-  margin-bottom:20px;
+  gap:18px;
+  margin:18px 0;
 }
+
 button{
   border:none;
-  border-radius:40px;
-  padding:12px 30px;
-  font-size:16px;
+  border-radius:30px;
+  padding:12px 28px;
+  font-size:15px;
   cursor:pointer;
-  font-weight:600;
-  box-shadow:0 5px 15px rgba(0,0,0,0.15);
-  transition: all 0.3s ease;
+  transition:.3s;
 }
+
 #yes{
-  background: linear-gradient(135deg,#ff6a88,#ff99ac);
-  color:white;
+  background:linear-gradient(135deg,#ff3366,#ff6a88);
+  color:#fff;
 }
-#yes:hover{box-shadow:0 0 20px #ff99ac; transform:translateY(-3px);}
+
 #no{
-  background: rgba(255,255,255,0.8);
+  background:#eee;
   color:#333;
   position:relative;
 }
-#no:hover{transform: scale(1.05);}
 
-/* Action Button */
 .action{
   width:100%;
-  margin-top:15px;
-  background: rgba(255,255,255,0.3);
-  border: 2px solid #ff3366;
+  margin-top:10px;
+  background:white;
+  border:2px solid #ff3366;
   color:#ff3366;
 }
-.action:hover{
-  background:#ff3366; color:#fff; box-shadow:0 0 20px #ff6a88; transform:translateY(-3px);
-}
 
-/* Footer */
 .footer{
-  font-size:13px;
+  font-size:12px;
   color:#fff;
-  margin-top:15px;
-  text-shadow:0 1px 3px rgba(0,0,0,0.2);
+  margin-top:12px;
 }
 
-/* Popup */
+/* POPUP */
 .popup{
   position:fixed;
   inset:0;
-  background: rgba(0,0,0,0.6);
+  background:rgba(0,0,0,.6);
   display:none;
   justify-content:center;
   align-items:center;
   z-index:99;
 }
+
 .card{
-  background: rgba(255,255,255,0.25);
-  backdrop-filter: blur(15px);
-  padding:30px;
-  border-radius:30px;
+  background:rgba(255,255,255,.25);
+  backdrop-filter:blur(12px);
+  padding:26px;
+  border-radius:26px;
   width:90%;
-  max-width:400px;
+  max-width:380px;
   text-align:center;
-  box-shadow:0 15px 30px rgba(0,0,0,0.25);
-  min-height:320px;
 }
 
-/* Buttons inside popup */
 .okay{
-  margin-top:20px;
-  background: linear-gradient(135deg,#ff3366,#ff6a88);
+  margin-top:16px;
+  background:linear-gradient(135deg,#ff3366,#ff6a88);
   color:white;
-  padding:12px 30px;
-  border-radius:40px;
-  font-weight:600;
-  box-shadow:0 5px 20px rgba(255,51,102,0.6);
-  cursor:pointer;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  padding:10px 28px;
+  border-radius:30px;
 }
-.okay:hover{transform:translateY(-3px); box-shadow:0 0 25px #ff6a88;}
 
-/* Heart Game */
-.game-area{position:relative; height:280px; overflow:hidden;}
+/* GAME */
+.game-area{
+  position:relative;
+  height:260px;
+  overflow:hidden;
+}
+
 .heart{
   position:absolute;
   bottom:-40px;
-  font-size:28px;
+  font-size:26px;
   cursor:pointer;
   animation:fly 3s linear forwards;
 }
-@keyframes fly{to{bottom:320px;}}
 
-/* Quiz buttons */
-.quiz-btn{
-  display:block;
-  width:100%;
-  margin:10px 0;
-  padding:12px;
-  border-radius:25px;
-  border:2px solid #ff6a88;
-  background:rgba(255,255,255,0.8);
-  font-weight:600;
-  cursor:pointer;
-  transition:all 0.3s ease;
+@keyframes fly{
+  to{bottom:300px;}
 }
-.quiz-btn:hover{background:#ff6a88; color:#fff;}
-.quiz-btn.correct{background:#4CAF50; color:white; border:none;}
 
-/* Heart blast */
+/* QUIZ */
+.quiz-btn{
+  width:100%;
+  margin:8px 0;
+  padding:10px;
+  border-radius:20px;
+  border:2px solid #ff6a88;
+  background:white;
+}
+
+.quiz-btn.correct{
+  background:#4CAF50;
+  color:white;
+  border:none;
+}
+
+/* BLAST */
 .blast{
   position:absolute;
-  font-size:22px;
+  font-size:20px;
   animation:pop 1s forwards;
 }
-@keyframes pop{0%{transform:scale(1);opacity:1;} 100%{transform:scale(2);opacity:0;}}
+
+@keyframes pop{
+  0%{transform:scale(1);opacity:1}
+  100%{transform:scale(2);opacity:0}
+}
 </style>
 </head>
+
 <body>
 
 <audio id="bgMusic" src="music.mp3.mp3" loop></audio>
 
 <div class="container">
-<h1>❤️ Sneha ❤️</h1>
-<h2>Will you be my Valentine?</h2>
+  <h1>❤️ Mrs.Sneha Saha ❤️</h1>
+  <h2>Will you be my Valentine Bubuu🙄?</h2>
 
-<div class="slider-wrapper">
-<img id="slider" src="pic1.jpg.jpeg">
-</div>
+  <div class="slider-box">
+    <img id="slider" src="pic1.jpg.jpeg">
+  </div>
 
-<div class="buttons">
-  <button id="yes">Yes 💖</button>
-  <button id="no">No 🙈</button>
-</div>
+  <p class="love-text">
+    “BUBU, from the moment you entered my life 😭 everything changed 😤.<br>
+    Your smile lights my darkest days, your voice calms my chaos 😋<br>
+    and your presence feels like homee babyy 😽🌸💓”
+  </p>
 
-<button class="action" onclick="startHeartGame()">Play a little game 🎮</button>
-<p class="footer">Every moment with you feels like a dream come true</p>
+  <div class="buttons">
+    <button id="yes">Yes 💖</button>
+    <button id="no">No 🙈</button>
+  </div>
+
+  <button class="action" onclick="startHeartGame()">Play a little game 🎮</button>
+  <p class="footer">Every moment with you feels like a dream come true amar sonai😤</p>
 </div>
 
 <div class="popup" id="popup">
@@ -199,44 +221,36 @@ button{
 <script>
 /* MUSIC */
 document.addEventListener("click",()=>{
-  const music=document.getElementById("bgMusic");
-  music.play().catch(e=>console.log("Music play blocked", e));
-},{once:true})
+  document.getElementById("bgMusic").play().catch(()=>{});
+},{once:true});
 
 /* SLIDER */
 const pics=["pic1.jpg.jpeg","pic2.jpg.jpeg","pic3.jpg.jpeg"];
 let pi=0;
 setInterval(()=>{
   pi=(pi+1)%pics.length;
-  document.getElementById("slider").src=pics[pi];
+  slider.src=pics[pi];
 },3000);
 
 /* POPUP */
 const popup=document.getElementById("popup");
 const content=document.getElementById("popupContent");
-function openPopup(html){content.innerHTML=html; popup.style.display="flex";}
+function openPopup(html){content.innerHTML=html;popup.style.display="flex";}
 function closePopup(){popup.style.display="none";}
 
 /* YES */
-document.getElementById("yes").onclick=()=>openPopup(`
-  <h3>I knew it 😭❤️</h3>
-  <p>You just made my whole world brighter</p>
-  <button class="okay" onclick="closePopup()">OKAY</button>
+yes.onclick=()=>openPopup(`
+<h3>I knew it Babyyyyy 😭❤️</h3>
+<p>You are my Valentine - today and always🤧💗</p>
+<button class="okay" onclick="closePopup()">OKAY</button>
 `);
 
 /* NO */
 let noCount=0;
-document.getElementById("no").onmouseover=e=>{
+no.onmouseover=e=>{
   noCount++;
   e.target.style.transform=`translate(${Math.random()*120-60}px,${Math.random()*60-30}px)`;
-  if(noCount===2){
-    openPopup(`
-      <h3>HOW DARE YOU 😾</h3>
-      <p>It's just for formality 😚<br>Option NO is invalid 🥰</p>
-      <button class="okay" onclick="closePopup()">OKAY</button>
-    `);
-  }
-}
+};
 
 /* HEART GAME */
 function startHeartGame(){
@@ -246,41 +260,43 @@ function startHeartGame(){
     <p id="count">Hearts: 0 / 3</p>
     <div class="game-area" id="area"></div>
   `);
+
   const area=document.getElementById("area");
   const counter=document.getElementById("count");
 
-  let interval=setInterval(()=>{
+  const interval=setInterval(()=>{
     const h=document.createElement("div");
-    h.className="heart"; h.innerText="❤️";
+    h.className="heart";
+    h.innerText="💖";
     h.style.left=Math.random()*90+"%";
     h.onclick=()=>{
       caught++;
-      counter.innerText="Hearts: "+caught+" / 3";
+      counter.innerText=`Hearts: ${caught} / 3`;
       h.remove();
       if(caught===3){
         clearInterval(interval);
-        setTimeout(()=>openPopup(`
-          <h3>Looks like my heart already belongs to you 😭❤️</h3>
-          <button class="okay" onclick="startQuiz()">Next and final game ➡️</button>
-        `),400);
+        setTimeout(()=>startQuiz(),400);
       }
     };
     area.appendChild(h);
   },700);
 }
 
-/* QUIZ */
+/* QUIZ — GUARANTEED 5/5 */
 const quiz=[
-  {q:"Who loves me more?", o:["Sneha","Bubu","Sonai"], c:[0,1,2]}, // all correct
-  {q:"What I love the most?", o:["irritating sneha","loving sneha","touching sneha","all of these"], c:[3]},
-  {q:"Who gets more jealous faster?", o:["Sneha","Rishi","Both of them"], c:[2]},
-  {q:"How many kids we want?", o:["4","2","1","69"], c:[2]}, // "1" is index 2
-  {q:"How much does Rishi loves you?", o:["0%","69%","100%","♾️"], c:[3]} // "♾️" is index 3
+ {q:"Who loves me more?",o:["Sneha","Bubu","Sonai"],type:"any"},
+ {q:"What I love the most?",o:["irritating sneha","loving sneha","touching sneha","all of these"],correct:3},
+ {q:"Who gets more jealous faster?",o:["Sneha","Rishi","Both of them"],correct:2},
+ {q:"How many kids we want?",o:["4","2","1","69"],correct:2},
+ {q:"How much does Rishi loves you?",o:["0%","69%","100%","♾️"],correct:3}
 ];
 
-let qi=0, score=0;
+let qi=0,score=0;
 
-function startQuiz(){qi=0; score=0; showQuiz();}
+function startQuiz(){
+  qi=0; score=0; showQuiz();
+}
+
 function showQuiz(){
   const q=quiz[qi];
   openPopup(`
@@ -289,37 +305,25 @@ function showQuiz(){
   `);
 }
 
-function answer(i, btn){
-  const q = quiz[qi];
-  // FIRST question: any option counts
-  if(qi===0){score++;}
-  else if(q.c.includes(i)){score++;}
+function answer(i,btn){
+  const q=quiz[qi];
+  if(q.type==="any" || i===q.correct) score++;
   btn.classList.add("correct");
-  blast(btn);
-  setTimeout(()=>{qi++; qi<quiz.length?showQuiz():result();},700);
-}
-
-function blast(el){
-  for(let i=0;i<8;i++){
-    const b=document.createElement("div");
-    b.className="blast";
-    b.innerText="❤️";
-    b.style.left=Math.random()*100+"%";
-    b.style.top=Math.random()*100+"%";
-    el.appendChild(b);
-    setTimeout(()=>b.remove(),1000);
-  }
+  setTimeout(()=>{
+    qi++;
+    qi<quiz.length ? showQuiz() : result();
+  },600);
 }
 
 function result(){
   openPopup(`
-    <h3>Game complete 💕</h3>
-    <p>Sneha scored ${score} / ${quiz.length}</p>
-    <p><b>No matter what your score is<br>
-    You love me the most 😌❤️</b></p>
+    <h3>Game complete Bubuuu💕</h3>
+    <p><b>Score: ${score} / ${quiz.length}</b></p>
+    <p>You love me the most amar sona bacchaa 😌❤️</p>
     <button class="okay" onclick="closePopup()">OKAY</button>
   `);
 }
 </script>
+
 </body>
 </html>
